--- a/teaching.html
+++ b/teaching.html
@@ -570,7 +570,13 @@
                             <div class="section-details">
                                 <div class="section-detail-item">7 มิ.ย. 2568 - 27 ก.ค. 2568</div>
                                 <div class="section-detail-item">อาทิตย์ 08:00 - 13:35</div>
-                                <div class="section-detail-item">Room: IT309</div>
+                            /* Lines 669-677 omitted */
+                            <div class="section-item">
+                                <a href="teaching/725103-2-2568.html" class="section-link">ภาคปลาย ปีการศึกษา 2568</a>
+                                <div class="section-details">
+                                    <div class="section-detail-item">รายละเอียดรายวิชา เวอร์ชัน OBE (CLOs, Mapping, Assessment)</div>
+                                </div>
+                            </div>
                             </div>
                         </div> -->
                         <div class="section-item">
@@ -667,7 +673,7 @@
                     </div>
                     <div class="course-sections">
                         <div class="section-item">
-                            <a href="teaching/725103-2-2568.html" class="section-link disabled">ภาคปลาย ปีการศึกษา 2568</a>
+                            <a href="teaching/725103-2-2568.html" class="section-link">ภาคปลาย ปีการศึกษา 2568</a>
                             <div class="section-details">
                                 <div class="section-detail-item">... TBA</div>
                                 <div class="section-detail-item">Online</div>
