--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -642,12 +642,33 @@
                             <a href="../obe3 dsa.pdf" target="_blank"><strong>obe3 dsa.pdf</strong></a>
                         </p>
                     </div> -->
-                    <div class="alert-box alert-info">
+                    <!-- <div class="alert-box alert-info">
                         <h5>ℹ️ ยินดีต้อนรับ</h5>
                         <p>
                             หน้านี้รวบรวมข้อมูลทั้งหมดของรายวิชา 720201 Quantitative Analysis for Business 
                             กรุณาใช้เมนูด้านซ้ายเพื่อเลือกดูเนื้อหาในแต่ละหัวข้อ
                         </p>
+                    </div> -->
+                    <div class="alert-box alert-info">
+                        <h5>📢 ประกาศงานกลุ่ม</h5>
+                        <p>
+                            แบ่งกลุ่ม กลุ่มละ 5-6 คน (แบ่งกันเองนะครับ โตๆ กันแล้วอาจารย์เชื่อว่าจัดการเรื่องกลุ่มกันเองได้ครับ ไม่มีการ log รายชื่อคนในกลุ่มใด ๆ ทั้งนั้น)<br>
+                            <strong>กำหนดส่งงานกลุ่มภายในวันที่ 30 กันยายน 2568</strong>
+                        </p>
+                        <p><strong>รายละเอียด:</strong></p>
+                        <ul>
+                            <li>หัวข้อ: การทำนายราคาหน่วยลงทุนกองทุนรวมด้วยตัวแบบการทำนายแบบต่าง ๆ</li>
+                            <li>รูปแบบ: รายงาน (Paper)</li>
+                            <li>ความยาว: ไม่เกิน 4 หน้ากระดาษ A4 ประกอบไปด้วย
+                                <ul style="margin-left: 1.5rem;">
+                                    <li>บทนำ: อธิบายว่าทำไมถึงสนใจกองทุนรวมตัวนี้</li>
+                                    <li>วิธีการเตรียมข้อมูล: อธิบายขั้นตอนการเตรียมข้อมูลสำหรับการวิเคราะห์</li>
+                                    <li>ผลลัพธ์: นำเสนอผลลัพธ์ที่ได้จากการวิเคราะห์ด้วยวิธีการที่เรียนไปในห้อง (หรือนอกเหนือจากที่เรียนไปก็ได้)</li>
+                                    <li>สรุป: สรุปผลการวิเคราะห์เชิงเปรียบเทียบ</li>
+                                </ul>
+                            </li>
+                            <li>รายละเอียดวิธีการทั้งหมด: <a href="https://docs.google.com/document/d/1n02BkPn6lpx6DqF0AwTQbjtBhdcwgYPxMt6Ls9Y4l5M/edit?usp=sharing" target="_blank"><strong>เอกสารแนบ</strong></a></li>
+                        </ul>
                     </div>
                     <p><strong>รหัสวิชา:</strong> 720201</p>
                     <p><strong>ชื่อวิชา:</strong> Quantitative Analysis for Business (การวิเคราะห์เชิงปริมาณทางธุรกิจ)</p>
