--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -700,6 +700,7 @@
                         <li><a href="../assets/handout/Quantitative_Analysis - markov.pdf" target="_blank">หนังสือ (บทมาร์คอฟ)</a> <small style="color: var(--gray-700);">(update at 24 August 2025)</small></li>
                         <li><a href="../assets/handout/Quantitative_Analysis - forecasting.pdf" target="_blank">หนังสือ (บทการทำนาย)</a> <small style="color: var(--gray-700);">(update at 30 August 2025)</small></li>
                         <li><a href="../assets/handout/Quantitative_Analysis - queue.pdf" target="_blank">หนังสือ (บททฤษฎีแถวคอย)</a> <small style="color: var(--gray-700);">(update at 13 September 2025)</small></li>
+                        <li><a href="../assets/latex_text/BookTemplate.pdf" target="_blank">หนังสือ (รวม)</a> <small style="color: var(--gray-700);">(update at 13 September 2025)</small></li>
                     </ul>
                 </section>
 
