--- a/teaching.html
+++ b/teaching.html
@@ -650,7 +650,7 @@
                     </div>
                     <div class="course-sections">
                         <div class="section-item">
-                            <a href="teaching/819605-B0-2-2568.html" class="section-link disabled">Block 0 ภาคปลาย ปีการศึกษา 2568</a>
+                            <a href="teaching/819605-2-2568.html" class="section-link">ภาคปลาย ปีการศึกษา 2568</a>
                             <div class="section-details">
                                 <div class="section-detail-item">... TBA</div>
                                 <div class="section-detail-item">Online</div>
