--- a/teaching/819605-2-2568.html
+++ b/teaching/819605-2-2568.html
@@ -711,9 +711,8 @@
                         <span class="section-icon">📅</span>
                         <h2 class="section-title">ตารางสอน</h2>
                     </div>
-                    <div id="schedule-content">
-                        <p>ตารางสอนจะได้รับการจัดเตรียมในภายหลัง</p>
-                    </div>
+                     <div id="schedule-list"></div>
+                    <p id="schedule-placeholder" style="color: var(--gray-700); font-style: italic;">ตารางสอนจะประกาศเร็วๆ นี้</p>
                 </section>
 
                 <!-- Grading Section -->
