--- a/teaching/819605-2-2568.html
+++ b/teaching/819605-2-2568.html
@@ -646,7 +646,7 @@
                     </div>
                     <p><strong>รหัสวิชา:</strong> 819605</p>
                     <p><strong>ชื่อวิชา:</strong> วิยุตคณิต (Discrete Mathematics)</p>
-                    <p><strong>หน่วยกิต:</strong> 3(3-0-6)</p>
+                    <p><strong>หน่วยกิต:</strong> 3(3-0-9)</p>
                     <p><strong>ภาคการศึกษา:</strong> ภาคปลาย ปีการศึกษา 2568</p>
                     <p><strong>ระยะเวลา:</strong> 1 พฤศจิกายน 2568 – 1 มีนาคม 2569</p>
                 </section>
@@ -666,7 +666,7 @@
                         <span class="section-icon">📄</span>
                         <h2 class="section-title">เอกสารประกอบการสอน</h2>
                     </div>
-                    <p>เอกสารประกอบการสอนจะได้รับการอัปเดตในภายหลัง</p>
+                    <p><a href="../assets/latex/text_discrete/main_discrete_prog.pdf" target="_blank">หนังสืออ่านประกอบ</a></p>
                 </section>
 
                 <!-- CLOs Section -->
