--- a/teaching/819605-2-2568.html
+++ b/teaching/819605-2-2568.html
@@ -867,7 +867,7 @@
 
         // Initialize on page load
         document.addEventListener('DOMContentLoaded', function() {
-            trackPageVisit();
+            // trackPageVisit();
             loadSectionFromHash();
             tryLoadOBE();
 
