--- a/teaching.html
+++ b/teaching.html
@@ -605,9 +605,9 @@
                         <div class="section-item">
                             <a href="teaching/720201-2-2568.html" class="section-link disabled">ภาคปลาย ปีการศึกษา 2568</a>
                             <div class="section-details">
-                                <div class="section-detail-item">XXXX - XXXX</div>
-                                <div class="section-detail-item">YYYY XX:XX - XX:XX</div>
-                                <div class="section-detail-item">Room: XXXX</div>
+                                <div class="section-detail-item">6 มกราคม - 30 เมษายน</div>
+                                <div class="section-detail-item">อังคาร 09:00 - 12:00</div>
+                                <div class="section-detail-item">Room: TBA</div>
                             </div>
                             <span class="badge upcoming">Upcoming</span>
                         </div>
@@ -627,9 +627,9 @@
                     </div>
                     <div class="course-sections">
                         <div class="section-item">
-                            <a href="teaching/821303-B0-2-2568.html" class="section-link disabled">Block 0 ภาคปลาย ปีการศึกษา 2568</a>
+                            <a href="teaching/821303-B0-2-2568.html" class="section-link disabled">ภาคปลาย ปีการศึกษา 2568</a>
                             <div class="section-details">
-                                <div class="section-detail-item">... TBA</div>
+                                <div class="section-detail-item">พฤหัสบดี 18:00 - 21:00</div>
                                 <div class="section-detail-item">Online</div>
                             </div>
                             <span class="badge upcoming">Upcoming</span>
@@ -650,9 +650,17 @@
                     </div>
                     <div class="course-sections">
                         <div class="section-item">
-                            <a href="teaching/819605-2-2568.html" class="section-link">ภาคปลาย ปีการศึกษา 2568</a>
+                            <a href="teaching/819605-2-2568.html" class="section-link">(H01) ภาคปลาย ปีการศึกษา 2568</a>
                             <div class="section-details">
-                                <div class="section-detail-item">... TBA</div>
+                                <div class="section-detail-item">อังคาร 17:45 - 20:45</div>
+                                <div class="section-detail-item">Online</div>
+                            </div>
+                            <span class="badge upcoming">Upcoming</span>
+                        </div>
+                        <div class="section-item">
+                            <a href="teaching/819605-2-2568.html" class="section-link">(I01) ภาคปลาย ปีการศึกษา 2568</a>
+                            <div class="section-details">
+                                <div class="section-detail-item">พุธ 17:45 - 20:45</div>
                                 <div class="section-detail-item">Online</div>
                             </div>
                             <span class="badge upcoming">Upcoming</span>
@@ -675,8 +683,8 @@
                         <div class="section-item">
                             <a href="teaching/725103-2-2568.html" class="section-link">ภาคปลาย ปีการศึกษา 2568</a>
                             <div class="section-details">
-                                <div class="section-detail-item">... TBA</div>
-                                <div class="section-detail-item">Online</div>
+                                <div class="section-detail-item">พฤหัสบดี 12:30 - 16:30</div>
+                                <div class="section-detail-item">Room: TBA</div>
                             </div>
                             <span class="badge upcoming">Upcoming</span>
                         </div>
