--- a/teaching/819605-2-2568.html
+++ b/teaching/819605-2-2568.html
@@ -25,528 +25,11 @@
     gtag('config', 'G-9VT36QFMKJ');
     </script>
 
+    <!-- Common Styles for Teaching Pages -->
+    <link rel="stylesheet" href="common-styles.css">
+
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
 
-        :root {
-            --darkblue: #002147;
-            --gold: #FFD700;
-            --light-bg: #f8f9fa;
-            --text-dark: #232323;
-            --white: #ffffff;
-            --gray-100: #f8f9fa;
-            --gray-200: #e9ecef;
-            --gray-300: #dee2e6;
-            --gray-700: #495057;
-            --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            --shadow-lg: 0 10px 30px rgba(0, 33, 71, 0.15);
-            --success: #2e7d32;
-            --info: #1976d2;
-            --warning: #f57c00;
-            --danger: #c62828;
-            --sidebar-width: 270px;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #f8f9fa 0%, #e2e8f0 100%);
-            color: var(--text-dark);
-            line-height: 1.6;
-            min-height: 100vh;
-        }
-
-        /* Top Header Navigation */
-        .top-nav {
-            background: var(--darkblue);
-            padding: 1rem 0;
-            box-shadow: var(--shadow-lg);
-            position: sticky;
-            top: 0;
-            z-index: 1001;
-            animation: slideDown 0.5s ease-out;
-        }
-
-        @keyframes slideDown {
-            from {
-                transform: translateY(-100%);
-                opacity: 0;
-            }
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-
-        .nav-container {
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 0 2rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .nav-brand {
-            color: var(--gold);
-            font-size: 1.2rem;
-            font-weight: 700;
-            text-decoration: none;
-            transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .nav-brand:hover {
-            color: var(--white);
-            transform: translateX(-4px);
-        }
-
-        .nav-brand::before {
-            content: '←';
-            font-size: 1.5rem;
-        }
-
-        .menu-toggle {
-            display: none;
-            background: var(--gold);
-            color: var(--darkblue);
-            border: none;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.2s ease;
-        }
-
-        .menu-toggle:hover {
-            background: var(--white);
-            transform: scale(1.05);
-        }
-
-        /* Hero Section */
-        .hero {
-            background: linear-gradient(135deg, var(--darkblue) 0%, #003d82 100%);
-            color: var(--white);
-            padding: 3rem 2rem;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"><path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".1" fill="%23FFD700"/></svg>') no-repeat bottom;
-            background-size: cover;
-            opacity: 0.3;
-        }
-
-        .hero-content {
-            max-width: 1400px;
-            margin: 0 auto;
-            position: relative;
-            z-index: 1;
-            animation: fadeInUp 0.8s ease-out;
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .hero h1 {
-            font-size: 2.5rem;
-            color: var(--gold);
-            margin-bottom: 0.5rem;
-            font-weight: 800;
-        }
-
-        .hero-subtitle {
-            font-size: 1.2rem;
-            margin-bottom: 0.3rem;
-            opacity: 0.95;
-        }
-
-        .hero-info {
-            font-size: 1rem;
-            opacity: 0.9;
-            font-weight: 300;
-        }
-
-        /* Main Layout Container */
-        .main-layout {
-            display: flex;
-            max-width: 1400px;
-            margin: 2rem auto;
-            padding: 0 2rem;
-            gap: 2rem;
-            position: relative;
-        }
-
-        /* Left Sidebar Navigation */
-        .sidebar {
-            width: var(--sidebar-width);
-            background: var(--white);
-            border-radius: 12px;
-            padding: 1.25rem;
-            box-shadow: var(--shadow);
-            position: sticky;
-            top: 100px;
-            height: fit-content;
-            max-height: calc(100vh - 120px);
-            overflow-y: auto;
-            transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        .sidebar-title {
-            font-size: 1rem;
-            font-weight: 700;
-            color: var(--darkblue);
-            margin-bottom: 0.9rem;
-            padding-bottom: 0.5rem;
-            border-bottom: 2px solid var(--gold);
-        }
-
-        .sidebar-menu {
-            list-style: none;
-        }
-
-        .sidebar-menu li {
-            margin-bottom: 0.5rem;
-        }
-
-        .sidebar-menu a {
-            display: flex;
-            align-items: center;
-            gap: 0.7rem;
-            padding: 0.1rem 0.9rem;
-            color: var(--text-dark);
-            text-decoration: none;
-            border-radius: 8px;
-            transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-            font-weight: 500;
-            border-left: 3px solid transparent;
-            font-size: 0.95rem;
-        }
-
-        .sidebar-menu a:hover {
-            background: var(--gray-100);
-            border-left-color: var(--gold);
-            transform: translateX(4px);
-        }
-
-        .sidebar-menu a.active {
-            background: linear-gradient(135deg, var(--darkblue) 0%, #003d82 100%);
-            color: var(--white);
-            border-left-color: var(--gold);
-            box-shadow: var(--shadow);
-        }
-
-        .sidebar-menu a .icon {
-            font-size: 1.1rem;
-            min-width: 22px;
-            text-align: center;
-        }
-
-        /* Main Content Area */
-        .content-area {
-            flex: 1;
-            min-width: 0;
-        }
-
-        .content-card {
-            background: var(--white);
-            border-radius: 12px;
-            padding: 2rem;
-            box-shadow: var(--shadow);
-        }
-
-        /* Section Styles with Fade-in */
-        .content-section {
-            display: none;
-            animation: fadeInSlide 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        .content-section.active {
-            display: block;
-        }
-
-        @keyframes fadeInSlide {
-            from {
-                opacity: 0;
-                transform: translateY(15px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .section-header {
-            display: flex;
-            align-items: center;
-            gap: 0.8rem;
-            margin-bottom: 1.5rem;
-            padding-bottom: 0.8rem;
-            border-bottom: 3px solid var(--gold);
-        }
-
-        .section-icon {
-            font-size: 1.8rem;
-        }
-
-        .section-title {
-            font-size: 1.8rem;
-            color: var(--darkblue);
-            font-weight: 700;
-            margin: 0;
-        }
-
-        /* Alert Boxes */
-        .alert-box {
-            padding: 1.2rem;
-            border-radius: 8px;
-            margin-bottom: 1.5rem;
-            border-left: 5px solid;
-            animation: slideInRight 0.35s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        @keyframes slideInRight {
-            from {
-                opacity: 0;
-                transform: translateX(-15px);
-            }
-            to {
-                opacity: 1;
-                transform: translateX(0);
-            }
-        }
-
-        .alert-danger {
-            background: #ffebee;
-            border-color: var(--danger);
-            color: var(--danger);
-        }
-
-        .alert-info {
-            background: #e3f2fd;
-            border-color: var(--info);
-            color: var(--info);
-        }
-
-        .alert-warning {
-            background: #fff3e0;
-            border-color: var(--warning);
-            color: var(--warning);
-        }
-
-        .alert-box h5 {
-            font-weight: 700;
-            margin-bottom: 0.5rem;
-            font-size: 1.1rem;
-        }
-
-        /* List Styles */
-        .styled-list {
-            list-style: none;
-            padding-left: 0;
-        }
-
-        .styled-list li {
-            padding: 0.8rem 0;
-            border-bottom: 1px solid var(--gray-200);
-            display: flex;
-            align-items: flex-start;
-            gap: 1rem;
-        }
-
-        .styled-list li:last-child {
-            border-bottom: none;
-        }
-
-        .styled-list li::before {
-            content: '📚';
-            font-size: 1.2rem;
-            flex-shrink: 0;
-        }
-
-        .styled-list a {
-            color: var(--darkblue);
-            text-decoration: none;
-            font-weight: 600;
-            transition: all 0.2s ease;
-        }
-
-        .styled-list a:hover {
-            color: var(--gold);
-            transform: translateX(3px);
-        }
-
-        /* Table Styles */
-        .table-wrap {
-            overflow-x: auto;
-            background: var(--white);
-            border-radius: 10px;
-            box-shadow: var(--shadow);
-            margin-bottom: 1rem;
-        }
-
-        table.modern {
-            width: 100%;
-            border-collapse: collapse;
-            font-size: 0.95rem;
-        }
-
-        table.modern thead th {
-            background: linear-gradient(135deg, var(--darkblue) 0%, #003d82 100%);
-            color: var(--white);
-            text-align: left;
-            padding: 0.85rem 1rem;
-            position: sticky;
-            top: 0;
-        }
-
-        table.modern tbody td {
-            padding: 0.75rem 1rem;
-            border-bottom: 1px solid var(--gray-200);
-            vertical-align: top;
-        }
-
-        table.modern tbody tr:nth-child(even) {
-            background: var(--gray-100);
-        }
-
-        .chip {
-            display: inline-block;
-            padding: 0.15rem 0.55rem;
-            border-radius: 999px;
-            background: #e3f2fd;
-            color: var(--info);
-            font-weight: 600;
-            font-size: 0.8rem;
-        }
-
-        /* Schedule List */
-        .schedule-item {
-            background: var(--gray-100);
-            padding: 1rem;
-            border-radius: 8px;
-            margin-bottom: 1rem;
-            border-left: 4px solid var(--gold);
-            transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        .schedule-item:hover {
-            transform: translateX(4px);
-            box-shadow: var(--shadow);
-            background: var(--white);
-        }
-
-        .schedule-item strong {
-            color: var(--darkblue);
-            display: block;
-            margin-bottom: 0.5rem;
-        }
-
-        .schedule-item ul {
-            margin: 0.5rem 0 0 1.5rem;
-            color: var(--gray-700);
-        }
-
-        /* Footer */
-        .footer {
-            background: var(--darkblue);
-            color: var(--white);
-            text-align: center;
-            padding: 2rem;
-            margin-top: 4rem;
-        }
-
-        .footer p {
-            margin: 0;
-            color: var(--gold);
-            font-weight: 500;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 1024px) {
-            .main-layout {
-                flex-direction: column;
-            }
-
-            .sidebar {
-                width: 100%;
-                position: static;
-                max-height: none;
-            }
-
-            .menu-toggle {
-                display: block;
-            }
-
-            .sidebar.collapsed {
-                display: none;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 1.8rem;
-            }
-
-            .hero-subtitle {
-                font-size: 1rem;
-            }
-
-            .main-layout {
-                padding: 0 1rem;
-            }
-
-            .content-card {
-                padding: 1.5rem;
-            }
-
-            .section-title {
-                font-size: 1.4rem;
-            }
-
-            .nav-container {
-                padding: 0 1rem;
-            }
-        }
-
-        /* Scrollbar Styling */
-        .sidebar::-webkit-scrollbar {
-            width: 6px;
-        }
-
-        .sidebar::-webkit-scrollbar-track {
-            background: var(--gray-100);
-            border-radius: 10px;
-        }
-
-        .sidebar::-webkit-scrollbar-thumb {
-            background: var(--gold);
-            border-radius: 10px;
-        }
-
-        .sidebar::-webkit-scrollbar-thumb:hover {
-            background: var(--darkblue);
-        }
     </style>
 </head>
 
