update some small stuff

--- a/TutorContact.html
+++ b/TutorContact.html
@@ -8,11 +8,11 @@
   <meta name="description" content="ติวเตอร์มากประสบการณ์ สอน Discrete Mathematics, Algorithms, Machine Learning, และ Data Science สำหรับนักเรียนไทย-อินเตอร์ เรียนตัวต่อตัวหรือออนไลน์กับ ปพนธีร์ แย้มโชติ (เต้ย)"/>
   <meta name="keywords"
         content="ติวเตอร์ Discrete Math, ติวเตอร์ Discrete, ติวเตอร์ Algorithms, ติวเตอร์ Data Structures, ติวเตอร์ Machine Learning, ติวเตอร์ Data Science, ติวเตอร์ Python, ติวเตอร์ Java, ติวเตอร์ ภาษา C, Phaphontee Yamchote, ปพนธีร์ แย้มโชติ, Machine Learning tutor, Data Science tutor" />
-  <link rel="canonical" href="https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html" />
+  <link rel="canonical" href="https://yamchote-ppt.github.io/TutorContact.html" />
 
   <meta property="og:type"        content="profile" />
   <meta property="og:locale"      content="th_TH" />
-  <meta property="og:url"         content="https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html" />
+  <meta property="og:url"         content="https://yamchote-ppt.github.io/TutorContact.html" />
   <meta property="og:title"       content="ปพนธีร์ แย้มโชติ - ติวเตอร์ Discrete Math & Algorithms" />
   <meta property="og:description" content="ปพนธีร์ แย้มโชติ (Phaphontee Yamchote) - เต้ย
                                             ติวเตอร์มหาวิทยาลัย – ผู้เชี่ยวชาญ Discrete Mathematics, Data Structures, Algorithms และ Programming ด้วย Python, Java, และ C
@@ -33,7 +33,7 @@
     "description": "University-level tutor specialising in Discrete Mathematics, Algorithms, Data Structures and Programming (Python, Java, C). ติวเตอร์ discrete, ติวเตอร์ discrete math, ติวเตอร์ algorithms, ติวเตอร์ data structures, ติวเตอร์ programming, ติวเตอร์ python, ติวเตอร์ java, ติวเตอร์ c language",
     "image": "https://yamchote-ppt.github.io/assets/images/profile.jpg",
     "jobTitle": "Tutor",
-    "url": "https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html",
+    "url": "https://yamchote-ppt.github.io/TutorContact.html",
     "sameAs": [
       "https://github.com/yamchote-ppt",
       "https://linkedin.com/in/phaphontee-yamchote"
