--- a/resume.html
+++ b/resume.html
@@ -642,7 +642,7 @@
             </div>
             <div class="contact-item">
                 <span>🌐</span>
-                <a href="https://yamchote-ppt.github.io/phaphontee-yamchote/" target="_blank">Portfolio</a>
+                <a href="https://yamchote-ppt.github.io/" target="_blank">Portfolio</a>
             </div>
         </div>
 
