--- a/teaching/720201-B1-1-2568-protected.html
+++ b/teaching/720201-B1-1-2568-protected.html
@@ -8,11 +8,11 @@
     <meta name="description" content="รายละเอียดรายวิชาที่สอนโดย ปพนธีร์ แย้มโชติ อาจารย์ประจำสาขาระบบสารสนเทศเพื่อธุรกิจดิจิทัล มหาวิทยาลัยเอเชียอาคเนย์ พร้อมตารางสอนและเอกสารประกอบการเรียน"/>
     <meta name="keywords"
                 content="Southeast Asia University, ปพนธีร์ แย้มโชติ, สอนมหาวิทยาลัย, อาจารย์" />
-    <link rel="canonical" href="https://yamchote-ppt.github.io/phaphontee-yamchote/Teaching.html" />
+    <link rel="canonical" href="https://yamchote-ppt.github.io/Teaching.html" />
 
     <meta property="og:type"        content="article" />
     <meta property="og:locale"      content="th_TH" />
-    <meta property="og:url"         content="https://yamchote-ppt.github.io/phaphontee-yamchote/Teaching.html" />
+    <meta property="og:url"         content="https://yamchote-ppt.github.io/Teaching.html" />
     <meta property="og:title"       content="Teaching Subjects | Southeast Asia University" />
     <meta property="og:description" content="รายละเอียดรายวิชาที่สอนโดย ปพนธีร์ แย้มโชติ พร้อมตารางสอนและเอกสารประกอบการเรียน">
     <meta property="og:image"       content="https://yamchote-ppt.github.io/assets/images/profile.jpg" />
@@ -49,7 +49,7 @@
             "@type": "Person",
             "name": "Phaphontee Yamchote",
             "alternateName": "ปพนธีร์ แย้มโชติ",
-            "url": "https://yamchote-ppt.github.io/phaphontee-yamchote/Teaching.html",
+            "url": "https://yamchote-ppt.github.io/Teaching.html",
             "sameAs": [
                 "https://github.com/yamchote-ppt",
                 "https://linkedin.com/in/phaphontee-yamchote"
