--- a/teaching/725103-2-2568-demo.html
+++ b/teaching/725103-2-2568-demo.html
@@ -7,11 +7,11 @@
     <title>725103 โครงสร้างข้อมูลและอัลกอริทึม | Southeast Asia University | ปพนธีร์ แย้มโชติ</title>
     <meta name="description" content="รายละเอียดรายวิชาที่สอนโดย ปพนธีร์ แย้มโชติ อาจารย์ประจำสาขาระบบสารสนเทศเพื่อธุรกิจดิจิทัล มหาวิทยาลัยเอเชียอาคเนย์ พร้อมตารางสอนและเอกสารประกอบการเรียน"/>
     <meta name="keywords" content="Data Structure and Algorithm, โครงสร้างข้อมูลและอัลกอริทึม, Southeast Asia University, ปพนธีร์ แย้มโชติ, สอนมหาวิทยาลัย, อาจารย์" />
-    <link rel="canonical" href="https://yamchote-ppt.github.io/phaphontee-yamchote/Teaching.html" />
+    <link rel="canonical" href="https://yamchote-ppt.github.io/Teaching.html" />
 
     <meta property="og:type" content="article" />
     <meta property="og:locale" content="th_TH" />
-    <meta property="og:url" content="https://yamchote-ppt.github.io/phaphontee-yamchote/Teaching.html" />
+    <meta property="og:url" content="https://yamchote-ppt.github.io/Teaching.html" />
     <meta property="og:title" content="Teaching Subjects | Southeast Asia University" />
     <meta property="og:description" content="รายละเอียดรายวิชาที่สอนโดย ปพนธีร์ แย้มโชติ พร้อมตารางสอนและเอกสารประกอบการเรียน">
     <meta property="og:image" content="https://yamchote-ppt.github.io/assets/images/profile.jpg" />
