--- a/teaching_new.html
+++ b/teaching_new.html
@@ -7,11 +7,11 @@
     <title>ปพนธีร์ แย้มโชติ | Southeast Asia University</title>
     <meta name="description" content="รายละเอียดรายวิชาที่สอนโดย ปพนธีร์ แย้มโชติ อาจารย์ประจำสาขาระบบสารสนเทศเพื่อธุรกิจดิจิทัล มหาวิทยาลัยเอเชียอาคเนย์ พร้อมตารางสอนและเอกสารประกอบการเรียน"/>
     <meta name="keywords" content="Southeast Asia University, ปพนธีร์ แย้มโชติ, สอนมหาวิทยาลัย, อาจารย์" />
-    <link rel="canonical" href="https://yamchote-ppt.github.io/phaphontee-yamchote/teaching_new.html" />
+    <link rel="canonical" href="https://yamchote-ppt.github.io/teaching_new.html" />
 
     <meta property="og:type" content="article" />
     <meta property="og:locale" content="th_TH" />
-    <meta property="og:url" content="https://yamchote-ppt.github.io/phaphontee-yamchote/teaching_new.html" />
+    <meta property="og:url" content="https://yamchote-ppt.github.io/teaching_new.html" />
     <meta property="og:title" content="Teaching Subjects | Southeast Asia University" />
     <meta property="og:description" content="รายละเอียดรายวิชาที่สอนโดย ปพนธีร์ แย้มโชติ พร้อมตารางสอนและเอกสารประกอบการเรียน">
     <meta property="og:image" content="https://yamchote-ppt.github.io/assets/images/profile.jpg" />
