--- a/tutor_gemini.html
+++ b/tutor_gemini.html
@@ -9,11 +9,11 @@
         content="เรียน Discrete Mathematics, Data Structures, Algorithms หรือ Python–Java–C กับ ปพนธีร์ แย้มโชติ (เต้ย) ติวเตอร์มหาวิทยาลัยมากประสบการณ์ 10 ปี – สอนตัวต่อตัวและออนไลน์ ในหลักสูตรไทยและอินเตอร์" />
   <meta name="keywords"
         content="ติวเตอร์ Discrete Math, ติวเตอร์ Discrete, ติวเตอร์ Algorithms, ติวเตอร์ Data Structures, Tutor Python, Tutor Java, Tutor C, Phaphontee Yamchote, เต้ย, Tutor Bangkok" />
-  <link rel="canonical" href="https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html" />
+  <link rel="canonical" href="https://yamchote-ppt.github.io/TutorContact.html" />
 
     <meta property="og:type"        content="profile" />
   <meta property="og:locale"      content="th_TH" />
-  <meta property="og:url"         content="https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html" />
+  <meta property="og:url"         content="https://yamchote-ppt.github.io/TutorContact.html" />
   <meta property="og:title"       content="ปพนธีร์ แย้มโชติ - ติวเตอร์ Discrete Math & Algorithms" />
   <meta property="og:description" content="ปพนธีร์ แย้มโชติ (Phaphontee Yamchote) - เต้ย
                                             ติวเตอร์มหาวิทยาลัย – ผู้เชี่ยวชาญ Discrete Mathematics, Data Structures, Algorithms และ Programming ด้วย Python, Java, และ C
@@ -34,7 +34,7 @@
     "description": "University-level tutor specialising in Discrete Mathematics, Algorithms, Data Structures and Programming (Python, Java, C). ติวเตอร์ discrete, ติวเตอร์ discrete math, ติวเตอร์ algorithms, ติวเตอร์ data structures, ติวเตอร์ programming, ติวเตอร์ python, ติวเตอร์ java, ติวเตอร์ c language",
     "image": "https://yamchote-ppt.github.io/assets/images/profile.jpg",
     "jobTitle": "Tutor",
-    "url": "https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html",
+    "url": "https://yamchote-ppt.github.io/TutorContact.html",
     "sameAs": [
       "https://github.com/yamchote-ppt",
       "https://linkedin.com/in/phaphontee-yamchote"
