--- a/teaching.html
+++ b/teaching.html
@@ -827,6 +827,33 @@
             <!-- Add more past courses as needed -->
         </div>
 
+        <!-- Past Courses Section -->
+        <div class="section-header" style="margin-top: 5rem;">
+            <h2 class="section-title">บริการวิชาการ</h2>
+        </div>
+
+        <div class="courses-grid" id="current-courses">
+            <!-- Past Course 1: Information Technology for Business - Previous -->
+            <div class="course-card">
+                <div class="course-header" style="opacity: 0.9;">
+                    <div class="course-code">การประยุกต์ใช้ AI ในการทำสื่ออย่างสร้างสรรค์</div>
+                </div>
+                <div class="course-body">
+                    <div class="course-sections">
+                        <div class="section-item">
+                            <a href="teaching/ai-sau-udom.html" class="section-link">ณ โรงเรียนวัดอุดมรังสี สำนักงานเขตหนองแขม</a>
+                            <div class="section-details">
+                                <div class="section-detail-item">8 พฤศจิกายน 2568</div>
+                            </div>
+                            <span class="badge">In-progress</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Add more -->
+        </div>
+
         <!-- Teaching Calendar Section -->
         <div class="section-header" style="margin-top: 5rem;">
             <h2 class="section-title">📅 Teaching Calendar</h2>
