--- a/teaching/ai-sau-udom.html
+++ b/teaching/ai-sau-udom.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>725103 โครงสร้างข้อมูลและอัลกอริทึม | Southeast Asia University | ปพนธีร์ แย้มโชติ</title>
-    <meta name="description" content="รายละเอียดรายวิชาที่สอนโดย ปพนธีร์ แย้มโชติ อาจารย์ประจำสาขาระบบสารสนเทศเพื่อธุรกิจดิจิทัล มหาวิทยาลัยเอเชียอาคเนย์ พร้อมตารางสอนและเอกสารประกอบการเรียน"/>
-    <meta name="keywords" content="Data Structure and Algorithm, โครงสร้างข้อมูลและอัลกอริทึม, Southeast Asia University, ปพนธีร์ แย้มโชติ, สอนมหาวิทยาลัย, อาจารย์" />
+    <title>การประยุกต์ใช้ AI ในการทำสื่ออย่างสร้างสรรค์ | โรงเรียนวัดอุดมรังสี | มหาวิทยาลัยเอเชียอาคเนย์ | ปพนธีร์ แย้มโชติ</title>
+    <meta name="description" content="รปพนธีร์ แย้มโชติ อาจารย์ประจำสาขาระบบสารสนเทศเพื่อธุรกิจดิจิทัล มหาวิทยาลัยเอเชียอาคเนย์ พร้อมตารางสอนและเอกสารประกอบการเรียน"/>
+    <meta name="keywords" content="Southeast Asia University, ปพนธีร์ แย้มโชติ" />
     <link rel="canonical" href="https://yamchote-ppt.github.io/Teaching.html" />
 
     <meta property="og:type" content="article" />
