--- a/teaching/ai-sau-udom.html
+++ b/teaching/ai-sau-udom.html
@@ -481,6 +481,13 @@
             
 
         </div>
+
+        <!-- Banner Image -->
+        <div style="text-align: center; margin: 2rem 0;">
+            <img src="../assets/prompten/ai-sau-udom.jpg" 
+                 alt="AI Workshop Banner" 
+                 style="max-width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);">
+        </div>
     </main>
 
     <!-- Footer -->
