add block 3 page

--- a/teaching.html
+++ b/teaching.html
@@ -656,12 +656,12 @@
                             </div>
                         </div> -->
                         <div class="section-item">
-                            <a href="teaching/720401-B3-1-2568.html" class="section-link disabled">Block 3 ภาคต้น ปีการศึกษา 2568</a>
+                            <a href="teaching/720401-B3-1-2568.html" class="section-link">Block 3 ภาคต้น ปีการศึกษา 2568</a>
                             <div class="section-details">
-                                <div class="section-detail-item">อาทิตย์ TBA</div>
-                                <div class="section-detail-item">Room: TBA</div>
+                                <div class="section-detail-item">อาทิตย์ 08:00 - 18:10</div>
+                                <div class="section-detail-item">Room: 704 อาคาร อาคารสนง.อธิการบดี -> IT309 อาคาร อาคารพลกฤษณ ประโมทะกะ</div>
                             </div>
-                            <span class="badge upcoming">Upcoming</span>
+                            <span class="badge">In-progress</span>
                         </div>
                     </div>
                 </div>
